examples/test/testpolicy9226.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9226
  namespace: namespace192
spec:
  podSelector:
    matchLabels:
      key32: value10
      key6: value26
      key5: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value27
          key12: value6
          key27: value23
      podSelector:
        matchLabels:
          key6: value24
          key30: value25
          key12: value15
